fixed error of text overlapping images on main page

--- a/public/assets/css/customization.css
+++ b/public/assets/css/customization.css
@@ -83,6 +83,7 @@ img.landscape {
 
   h1 {
     font-size: 5vw;
+    margin-top: 10vh;
     margin-left: 5vw;
   }
   
